--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -277,7 +277,7 @@
     font-family: "Montserrat Alternates", serif; /* Optional: Allow resizing of the textarea vertically */
   }
   
-  #title-filter {
+  #filter-input {
     margin-bottom: 20px;
     border: 2px solid deepskyblue;
     font-family: "Montserrat Alternates", serif;
