--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -33,7 +33,7 @@
     border-radius: 5px;
   }
   
-  /* Making 2 columns for SIGN IN and SIGN UP */
+ 
   .second-container .box {
     position: relative;
     width: 50%;
@@ -44,7 +44,7 @@
     flex-direction: column;
   }
   
-  /* Adding style to H2 font */
+  
   .second-container .box h2 {
     color: white;
     font-size: 1.2em;
@@ -52,7 +52,7 @@
     margin-bottom: 10px;
   }
   
-  /* Adding style to BOTH buttons */
+  
   .second-container .box button {
     cursor: pointer;
     padding: 10px 20px;
@@ -249,16 +249,14 @@
     margin-bottom: 10px;
     font-family: "Montserrat Alternates", serif;
   }
-  
-  /* Style for the content */
+
   .post-content {
     font-family: "Montserrat Alternates", serif;
     font-size: 16px;
     line-height: 1.6;
     color: deeppink;
   }
-  
-  /* Additional styles for the post container (optional) */
+
   .post-container {
     border: 2px solid grey;
     padding: 15px;
@@ -267,14 +265,14 @@
   }
   
   textarea {
-    font-size: 16px; /* Increase the text size inside the textarea */
-    padding: 10px; /* Optional: Add padding for better readability */
-    width: 100%; /* Optional: Make textarea fill the width of its container */
-    height: 150px; /* Optional: Set a fixed height */
-    border: 2px solid grey; /* Optional: Add border */
-    border-radius: 5px; /* Optional: Rounded corners */
+    font-size: 16px; 
+    padding: 10px; 
+    width: 100%;
+    height: 150px; 
+    border: 2px solid grey; 
+    border-radius: 5px; 
     resize: vertical;
-    font-family: "Montserrat Alternates", serif; /* Optional: Allow resizing of the textarea vertically */
+    font-family: "Montserrat Alternates", serif; 
   }
   
   #filter-input {
