enlarge filter box for mobile responsive

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -312,5 +312,10 @@
       position: relative;
       bottom: 60px;
     }
+
+    #filter-input {
+      margin-bottom: 20px;
+      width: 40%;
+    }
   }
   
